ast/src/snapshots/ast__tests__locale_variable_table.snap
---
source: ast/src/lib.rs
expression: parsed
---
Ok(
    AstFile {
        package: AstIdentifier {
            range: AstRange {
                start: AstPoint {
                    line: 0,
                    col: 8,
                },
                end: AstPoint {
                    line: 0,
                    col: 21,
                },
            },
            value: "ch.emilycares",
        },
        imports: [
            AstIdentifier {
                range: AstRange {
                    start: AstPoint {
                        line: 1,
                        col: 7,
                    },
                    end: AstPoint {
                        line: 1,
                        col: 18,
                    },
                },
                value: "java.util.*",
            },
        ],
        thing: Class(
            AstClass {
                avaliability: Public,
                name: AstIdentifier {
                    range: AstRange {
                        start: AstPoint {
                            line: 2,
                            col: 13,
                        },
                        end: AstPoint {
                            line: 2,
                            col: 31,
                        },
                    },
                    value: "LocalVariableTable",
                },
                superclass: None,
                variables: [
                    AstClassVariable {
                        range: AstRange {
                            start: AstPoint {
                                line: 4,
                                col: 2,
                            },
                            end: AstPoint {
                                line: 6,
                                col: 8,
                            },
                        },
                        avaliability: Private,
                        name: AstIdentifier {
                            range: AstRange {
                                start: AstPoint {
                                    line: 4,
                                    col: 26,
                                },
                                end: AstPoint {
                                    line: 4,
                                    col: 27,
                                },
                            },
                            value: "a",
                        },
                        jtype: AstJType {
                            range: AstRange {
                                start: AstPoint {
                                    line: 4,
                                    col: 10,
                                },
                                end: AstPoint {
                                    line: 4,
                                    col: 25,
                                },
                            },
                            value: Generic(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint {
                                            line: 4,
                                            col: 10,
                                        },
                                        end: AstPoint {
                                            line: 4,
                                            col: 17,
                                        },
                                    },
                                    value: "HashSet",
                                },
                                [
                                    AstJType {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 4,
                                                col: 18,
                                            },
                                            end: AstPoint {
                                                line: 4,
                                                col: 24,
                                            },
                                        },
                                        value: Class(
                                            AstIdentifier {
                                                range: AstRange {
                                                    start: AstPoint {
                                                        line: 4,
                                                        col: 18,
                                                    },
                                                    end: AstPoint {
                                                        line: 4,
                                                        col: 24,
                                                    },
                                                },
                                                value: "String",
                                            },
                                        ),
                                    },
                                ],
                            ),
                        },
                        value: Some(
                            NewClass(
                                AstValueNewClass {
                                    range: AstRange {
                                        start: AstPoint {
                                            line: 4,
                                            col: 30,
                                        },
                                        end: AstPoint {
                                            line: 4,
                                            col: 45,
                                        },
                                    },
                                    jtype: AstJType {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 4,
                                                col: 34,
                                            },
                                            end: AstPoint {
                                                line: 4,
                                                col: 43,
                                            },
                                        },
                                        value: Generic(
                                            AstIdentifier {
                                                range: AstRange {
                                                    start: AstPoint {
                                                        line: 4,
                                                        col: 34,
                                                    },
                                                    end: AstPoint {
                                                        line: 4,
                                                        col: 41,
                                                    },
                                                },
                                                value: "HashSet",
                                            },
                                            [],
                                        ),
                                    },
                                    parameters: [],
                                },
                            ),
                        ),
                    },
                ],
            },
        ),
    },
)
