ast/src/snapshots/ast__tests__skip_comments.snap
---
source: ast/src/lib.rs
expression: parsed.unwrap()
snapshot_kind: text
---
AstFile {
    package: AstIdentifier {
        range: AstRange {
            start: AstPoint {
                line: 1,
                col: 8,
            },
            end: AstPoint {
                line: 1,
                col: 21,
            },
        },
        value: "ch.emilycares",
    },
    imports: AstImports {
        range: AstRange {
            start: AstPoint {
                line: 3,
                col: 0,
            },
            end: AstPoint {
                line: 3,
                col: 6,
            },
        },
        imports: [],
    },
    thing: Class(
        AstClass {
            range: AstRange {
                start: AstPoint {
                    line: 3,
                    col: 13,
                },
                end: AstPoint {
                    line: 13,
                    col: 1,
                },
            },
            avaliability: Public,
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint {
                        line: 3,
                        col: 13,
                    },
                    end: AstPoint {
                        line: 3,
                        col: 23,
                    },
                },
                value: "Everything",
            },
            superclass: None,
            variables: [
                AstClassVariable {
                    range: AstRange {
                        start: AstPoint {
                            line: 5,
                            col: 4,
                        },
                        end: AstPoint {
                            line: 5,
                            col: 30,
                        },
                    },
                    avaliability: Public,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint {
                                line: 5,
                                col: 15,
                            },
                            end: AstPoint {
                                line: 5,
                                col: 29,
                            },
                        },
                        value: "publicproperty",
                    },
                    jtype: AstJType {
                        range: AstRange {
                            start: AstPoint {
                                line: 5,
                                col: 11,
                            },
                            end: AstPoint {
                                line: 5,
                                col: 14,
                            },
                        },
                        value: Int,
                    },
                    expression: None,
                    fin: false,
                },
                AstClassVariable {
                    range: AstRange {
                        start: AstPoint {
                            line: 7,
                            col: 4,
                        },
                        end: AstPoint {
                            line: 7,
                            col: 32,
                        },
                    },
                    avaliability: Private,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint {
                                line: 7,
                                col: 16,
                            },
                            end: AstPoint {
                                line: 7,
                                col: 31,
                            },
                        },
                        value: "privateproperty",
                    },
                    jtype: AstJType {
                        range: AstRange {
                            start: AstPoint {
                                line: 7,
                                col: 12,
                            },
                            end: AstPoint {
                                line: 7,
                                col: 15,
                            },
                        },
                        value: Int,
                    },
                    expression: None,
                    fin: false,
                },
                AstClassVariable {
                    range: AstRange {
                        start: AstPoint {
                            line: 12,
                            col: 4,
                        },
                        end: AstPoint {
                            line: 12,
                            col: 32,
                        },
                    },
                    avaliability: Private,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint {
                                line: 12,
                                col: 16,
                            },
                            end: AstPoint {
                                line: 12,
                                col: 31,
                            },
                        },
                        value: "privateproperty",
                    },
                    jtype: AstJType {
                        range: AstRange {
                            start: AstPoint {
                                line: 12,
                                col: 12,
                            },
                            end: AstPoint {
                                line: 12,
                                col: 15,
                            },
                        },
                        value: Int,
                    },
                    expression: None,
                    fin: false,
                },
            ],
            methods: [],
            constructors: [],
        },
    ),
}
