ast/src/snapshots/ast__tests__superee.snap
---
source: ast/src/lib.rs
expression: parsed.unwrap()
snapshot_kind: text
---
AstFile {
    package: AstIdentifier {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 8,
            },
            end: AstPoint {
                line: 0,
                col: 21,
            },
        },
        value: "ch.emilycares",
    },
    imports: AstImports {
        range: AstRange {
            start: AstPoint {
                line: 2,
                col: 0,
            },
            end: AstPoint {
                line: 4,
                col: 6,
            },
        },
        imports: [
            AstImport {
                range: AstRange {
                    start: AstPoint {
                        line: 2,
                        col: 0,
                    },
                    end: AstPoint {
                        line: 4,
                        col: 6,
                    },
                },
                unit: Class(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint {
                                line: 2,
                                col: 7,
                            },
                            end: AstPoint {
                                line: 2,
                                col: 26,
                            },
                        },
                        value: "java.io.IOException",
                    },
                ),
            },
        ],
    },
    thing: Class(
        AstClass {
            range: AstRange {
                start: AstPoint {
                    line: 4,
                    col: 13,
                },
                end: AstPoint {
                    line: 5,
                    col: 1,
                },
            },
            avaliability: Public,
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint {
                        line: 4,
                        col: 13,
                    },
                    end: AstPoint {
                        line: 4,
                        col: 18,
                    },
                },
                value: "Super",
            },
            superclass: Name(
                AstIdentifier {
                    range: AstRange {
                        start: AstPoint {
                            line: 4,
                            col: 27,
                        },
                        end: AstPoint {
                            line: 4,
                            col: 38,
                        },
                    },
                    value: "IOException",
                },
            ),
            variables: [],
            methods: [],
            constructors: [],
        },
    ),
}
